external-crates/move/crates/move-compiler/tests/move_2024/typing/macro_arg_by_name_invalid_usage_deref.exp
error[E04032]: unable to expand macro function
  ┌─ tests/move_2024/typing/macro_arg_by_name_invalid_usage_deref.move:4:9
  │
4 │         $_x = 0;
  │         ^^^ Cannot assign to argument for parameter '$_x'. Arguments must be used in value positions
  │
  = 'macro' parameters are substituted without being evaluated. There is no local variable to assign to

