external-crates/move/crates/move-compiler/tests/move_2024/typing/macro_arg_by_name_invalid_usage_deref.move
module a::m {
    // macro args are call-by-name, not all usages are valid
    macro fun foo<$T>($_x: $T) {
        $_x = 0;
    }

    fun t() {
        let x = 0;
        foo!(*x);
    }
}
